# QuickJSAndroidSampleApp

./: .gitignore  LICENSE  QUICKSTART.md  README.md  README_SERVER.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  quickjs_integration.cpp
app/src/main/java/com/quickjs/android/: HttpService.kt  MainActivity.kt  NetworkService.kt  QuickJSBridge.kt
app/src/main/java/com/quickjs/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/quickjs/android/: HttpServiceTest.kt  QuickJSBridgeTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
